--- a/app/views/gift_categories/list.html.erb
+++ b/app/views/gift_categories/list.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
   
-  <p><%= link_to "«« Back to Gifts »»", gift_path %> | <%= link_to "«« Back to Admin Panel »»", admin_path %></p></br> 
+  <p><%= link_to "«« Back to Gifts »»", gifts_path %> | <%= link_to "«« Back to Admin Panel »»", admin_path %></p></br> 
   
   <h4>List of Gift Categories</h4></br>
   
