added slideshow slider

--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -21,7 +21,9 @@
       </div>
       
       <div class="span9">
-        <div id="slideshow"><%= splash_one %></div> 
+        <div id="slideshow">
+        <%= splash_one %> 
+        <%= splash_two %>
       </div>
     
     </div>  
