--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -24,13 +24,13 @@
         <div id="slideshow">
         <%= splash_one %> 
         <%= splash_two %>
+        </div>
       </div>
     
     </div>  
   
   </br>
-
-
+  
   <a name="gifts"></a>
   <div class="row"> 
   
