--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -14,7 +14,7 @@
         <p class="splash-font"><strong>WE ARE SOCIAL: </strong><br/></p>
         <div style="opacity: 0.6">
           <%= link_to facebook, "http://www.facebook.com/pages/Bubboli/150558398340272", :target => "_blank" %>  
-          <%= link_to twitter, "http://www.twitter.com/BubboliKids", :target => "_blank" %>
+          <%= link_to twitter, "http://www.twitter.com/bubboli", :target => "_blank" %>
           <p style="text-align: center"><%= link_to pinterest, "http://www.pinterest.com/bubboli/", :target => "_blank" %>
           <%= link_to rss, "#", :target => "_blank" %></p>
         </div>
