fixed twitter in about page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -170,6 +170,11 @@ li.prod-list {
   text-decoration: none;
   }
 
+.red-link a {
+  color: $bubboli-red;
+  text-decoration: none;
+  }
+
 .socialmedia-logo {
   list-style: none;
   }
