--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -48,7 +48,7 @@
           
           <div style="text-align: center"><%= image_tag(@blog.image_url(:large_pic).to_s) if @blog.image? %></div>
           
-          <div class="blog-content">
+          <div class="blog-content red-link">
             <%= simple_format(@blog.content) %>
           </div>
         
