--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -54,7 +54,7 @@
       </br>
       </br>  
         
-      Also, check us out on Twitter at <%= link_to '@bubbolikids', "http://www.twitter.com/BubboliKids", :target => "_blank" %> 
+      Also, check us out on Twitter at <%= link_to '@bubboli', "http://www.twitter.com/BubboliKids", :target => "_blank" %> 
       or like us on <%= link_to 'Facebook', "http://www.facebook.com/pages/Bubboli/150558398340272", :target => "_blank" %>.
       
       </br>
