--- a/app/views/gifts/manage.html.erb
+++ b/app/views/gifts/manage.html.erb
@@ -14,8 +14,11 @@
             <%= ff.input :image, :as => :file %>
             <%= ff.input :remote_image_url, :label => "Remote Image URL" %>
             <%= ff.input :image2, :as => :file %>
-            <%= ff.input :remote_image2_url, :label => "Remote Image URL" %>
-
+            <%= ff.input :remote_image2_url, :label => "Remote Image 2 URL" %>
+            <%= ff.input :image3, :as => :file %>
+            <%= ff.input :remote_image3_url, :label => "Remote Image 3 URL" %>
+            <%= ff.input :image4, :as => :file %>
+            <%= ff.input :remote_image4_url, :label => "Remote Image 4 URL" %>
           <% end %>
 
           <%= f.input :name %>
