added blog images model

--- a/app/views/blogs/manage.html.erb
+++ b/app/views/blogs/manage.html.erb
@@ -9,8 +9,16 @@
 
       <div class="row">
         <div class="span16">
-          <%= f.input :image, :as => :file %>
-          <%= f.input :remote_image_url, :label => "Remote Image URL" %>
+          <%= f.semantic_fields_for :blog_image do |ff| %>
+            <%= ff.input :image, :as => :file %>
+            <%= ff.input :remote_image_url, :label => "Remote Image URL" %>
+            <%= ff.input :image2, :as => :file %>
+            <%= ff.input :remote_image2_url, :label => "Remote Image 2 URL" %>
+            <%= ff.input :image3, :as => :file %>
+            <%= ff.input :remote_image3_url, :label => "Remote Image 3 URL" %>
+            <%= ff.input :image4, :as => :file %>
+            <%= ff.input :remote_image4_url, :label => "Remote Image 4 URL" %>
+          <% end %>
           <%= f.input :title %>
           <%= f.input :author %>
           <div class="textarea span3"><%= f.input :content, :input_html => { :rows => 20, :class => "xxlarge" }%></div>
