customized twitter button

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -29,7 +29,7 @@
 
             <div class="span4 no-margin-or-bullet">
               <span class='st_facebook_hcount' displayText='Facebook'></span>
-              <span class='st_twitter_hcount' displayText='Tweet'></span>
+              <span class='st_twitter_hcount' displayText='Tweet' st_title='<%= @page_title %> via @bubboli'></span>
             </div>
 
           </div>
