--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -21,7 +21,7 @@
       </div>
       
       <div class="span9">
-        <div id="slideshow">
+        <div id="mainslideshow">
         <%= splash_one %> 
         <%= splash_two %>
         </div>
