--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -57,7 +57,7 @@ function switch_tabs(obj)
       <div class="btn primary white-link"><%= link_to "Buy It Now", link, :target => "_blank" %></div></br></br>
       <span class='st_facebook'></span>
       <span class='st_twitter' st_title='<%= @page_title %> via @bubboli'></span>
-      <span class='st_pinterest' st_img='<%= @gift.gift_image.image_url(:large_pic) %>'></span>
+      <span class='st_pinterest' st_img='<%= @gift.gift_images.first.image_url(:large_pic) %>'></span>
       <span class='st_email'></span>
     </div>
     
