--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -359,3 +359,20 @@ img.float-right {
   -moz-border-radius: 4px;
   }
   
+.thumbs img {
+	border: solid 1px #ccc;
+	padding: 4px;
+}
+.thumbs img:hover {
+	border-color: #FF9900;
+}
+
+a.thumb {
+padding: 2px;
+display: block;
+border: 2px solid $bubboli-red;
+}
+
+.selected {
+border: 1px solid $bubboli-red;
+}
