--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -34,13 +34,14 @@ function switch_tabs(obj)
   <div class="row">
     <div class="span12">
       
-      <div class="row">
-        
+      <div>
+        <h3><%= @gift.name %></h3>
         <%= render(:partial => "gift_images") %>
       
       </div>
       
-      <div class="row">
+      </br>
+      <div>
           <ul class="tabs">
             <li><a href="javascript:void(0)" class="active" rel="tabs1">Product Description</a></li>
             <li><a href="javascript:void(0)" rel="tabs2">Why Bubboli Loves It</a></li>
@@ -64,49 +65,3 @@ function switch_tabs(obj)
   </div>  
 </div>
 
-<script type="text/javascript">
-			jQuery(document).ready(function($) {
-				// We only want these styles applied when javascript is enabled
-				$('div.navigation').css({'width' : '230px', 'float' : 'left'});
-				$('div.content').css('display', 'block');
-
-				// Initially set opacity on thumbs and add
-				// additional styling for hover effect on thumbs
-				var onMouseOutOpacity = 0.67;
-				$('#thumbs ul.thumbs li').opacityrollover({
-					mouseOutOpacity:   onMouseOutOpacity,
-					mouseOverOpacity:  1.0,
-					fadeSpeed:         'fast',
-					exemptionSelector: '.selected'
-				});
-				
-				// Initialize Advanced Galleriffic Gallery
-				var gallery = $('#thumbs').galleriffic({
-					delay:                     2500,
-					numThumbs:                 15,
-					preloadAhead:              10,
-					enableTopPager:            true,
-					enableBottomPager:         true,
-					maxPagesToShow:            7,
-					imageContainerSel:         '#slideshow',
-					loadingContainerSel:       '#loading',
-					renderSSControls:          true,
-					enableHistory:             false,
-					autoStart:                 false,
-					syncTransitions:           true,
-					defaultTransitionDuration: 900,
-					onSlideChange:             function(prevIndex, nextIndex) {
-						// 'this' refers to the gallery, which is an extension of $('#thumbs')
-						this.find('ul.thumbs').children()
-							.eq(prevIndex).fadeTo('fast', onMouseOutOpacity).end()
-							.eq(nextIndex).fadeTo('fast', 1.0);
-					},
-					onPageTransitionOut:       function(callback) {
-						this.fadeTo('fast', 0.0, callback);
-					},
-					onPageTransitionIn:        function() {
-						this.fadeTo('fast', 1.0);
-					}
-				});
-			});
-		</script>
