--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -5,8 +5,7 @@
     <div class="row">
 
       <div class="span3 splash-box">
-        <p class="splash-font"><strong>Let us help you find the perfect gift for your little ones<p class="gray-font">We only suggest the best products
-          in the market.</strong></p>
+        <p class="splash-font"><strong>Let us help you find the perfect gift for your little ones<p class="gray-font">We only suggest the best products.</strong></p>
         <hr/>
         <p class="splash-font"><strong><%= mail_to("contact@bubboli.com", "Suggest A Toy", :subject => "Suggest A Toy") %></strong></br></p>
         <p class="gray-font"><strong>Is there a toy that your child just absolutely loves? Suggest it to us so we can share it with others.</strong></p>
