changed facebook to bubboli

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -55,7 +55,7 @@
         <div class="container">
           <ul class="nav">
             <li><%= tabs %></li>
-            <li class="socialmedia-overlap fb"><%= link_to facebook, "http://www.facebook.com/pages/Bubboli/150558398340272", :target => "_blank" %></li>
+            <li class="socialmedia-overlap fb"><%= link_to facebook, "http://www.facebook.com/bubboli", :target => "_blank" %></li>
             <li class="socialmedia-overlap twitter"><%= link_to twitter, "http://www.twitter.com/bubboli", :target => "_blank" %></li>
             <li class="socialmedia-overlap pinterest"><%= link_to pinterest, "http://www.pinterest.com/bubboli/", :target => "_blank" %></li>
             <li class="socialmedia-overlap rss"><%= link_to rss, "#", :target => "_blank" %></li>
