--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -70,6 +70,7 @@ p {
   
 .topbar .fill {
   background-image: -moz-linear-gradient(center top , $background-blue, #FFF);
+  background-image: -ms-linear-gradient(center top , $background-blue, #FFF);
   background-image: -khtml-gradient(linear, left top, left bottom, from($background-blue), to(#FFF));
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #FFF), color-stop(100%, $background-blue));
   background-image: -webkit-linear-gradient(top, $background-blue, #FFF);
