changed color of tab content line

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -349,7 +349,7 @@ img.float-right {
   }
   
 .tab-content {
-  border-bottom: 1px solid $bubboli-red
+  border-bottom: 1px solid $subdued-red
   }  
 
 .gift-buy-box {
