temp delete related gifts

--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -53,7 +53,7 @@ function switch_tabs(obj)
         </br>
         
         <div>
-          <%= render(:partial => "related_gifts")%>
+          <%= # render(:partial => "related_gifts")%>
         </div>
         
     </div>
