added age range model

--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -6,6 +6,7 @@
     <li><%= link_to "Manage Comments", list_comment_path %></li>
     <li><%= link_to "Manage Blog Categories", list_blog_category_path %></li>
     <li><%= link_to "Manage Gift Categories", list_gift_category_path %></li>
+    <li><%= link_to "Manage Gift Age Ranges", list_gift_age_range_path %></li>
   </div>
 
 </div>
