--- a/app/views/gifts/manage.html.erb
+++ b/app/views/gifts/manage.html.erb
@@ -22,22 +22,14 @@
           <%= f.input :merchant %>
           <%= f.input :sku, :label => "SKU Number" %>
           <%= f.input :manufacturer %>
-          <%= f.input :gender, :as => :select, :collection => ['Male', 'Female', 'Unisex'] %>  
-          <%= f.input :age_range, :as => :select, :collection => ['Birth-12 Mos.', '12-24 Mos.', '2 Years', '3-4 Years', '5-7 Years', '8-11 Years', '12+ Years'] %>
+          <%= f.input :gender, :as => :select, :collection => ['Male', 'Female', 'Unisex'] %>           
+          <%= f.input :gift_age_ranges, :as => :check_boxes, :label => "Age Range" %>                    
           <%= f.input :price %>
-          <%= f.input :price_search, :as => :select, :collection => ['Less Than $25.00', '$25.00 - $49.99', '$50.00-$74.99', '$75.00-$99.99', '$100.00-$199.99', '$200.00 & Up'] %>          
-
-
-          <label>Gift Categories</label>
-          <div class="input">
-            <% @all_gift_categories.each do |cat| %>
-              <%= check_box_tag('gift_categories[]', cat.id, @gift.gift_categories.map {|c| c.id }.include?(cat.id)) %> 
-              <%= cat.name %></br>
-            <% end %>
-          </div>
-
+          <%= f.input :price_search, :as => :select, :collection => ['Less Than $25.00', '$25.00 - $49.99', '$50.00-$74.99', '$75.00-$99.99', '$100.00-$199.99', '$200.00 & Up'], :label => "Price Search" %>          
+          <%= f.input :gift_categories, :as => :check_boxes, :label => "Gift Categories" %>
           <%= f.input :available, :label => "Availability", :as => :radio, :collection => [["True", true], ["False", false]] %>      
           <%= f.input :favorite, :label => "Favorite", :as => :radio, :collection => [["True", true], ["False", false]] %>      
+
         </div>
 
         <div class="span8">
