added navigation to list

--- a/app/views/blogs/list.html.erb
+++ b/app/views/blogs/list.html.erb
@@ -44,6 +44,8 @@
 
   </table>
   
+  <%= page_navigation_links @blogs, '#' %>
+  
   <div class="btn primary white-link pull-right"><%= link_to "New", :action => 'manage' %></div>
 
 </div>
