--- a/app/views/gifts/list.html.erb
+++ b/app/views/gifts/list.html.erb
@@ -40,6 +40,8 @@
 
   </table>
   
+  <%= page_navigation_links @gifts, '#' %>
+  
   <div class="btn primary white-link pull-right"><%= link_to "New", :action => 'manage' %></div>
 
 </div>
